--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psychiatry</title>
+    <base href="/psychiatry-website/" />
     <link rel="stylesheet" type="text/css" href="/loader.css" />
   </head>
 
@@ -14,6 +15,7 @@
       <div id="loading-bg">
         <div class="loading-logo">
           <!-- SVG Logo -->
+
           <svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
